--- a/27-29.09.2021/styles/styles-table.css
+++ b/27-29.09.2021/styles/styles-table.css
@@ -11,7 +11,7 @@ body {
     border-collapse: collapse;
 }
 .my_table{
-    /*margin-top: 250px;*/
+    margin-top: 250px;
 }
 td{
     background-color: deepskyblue;
